인기메뉴 탭 메뉴 구현 및 json으로 데이터 삽입

--- a/index.html
+++ b/index.html
@@ -526,6 +526,9 @@
                         <a href="#" class="good-link">
                             <span class="good-img">
                                 <img src='images/recommend_08.jpg' alt="제품">
+                                <span class="good-tag good-tag-red">
+                                    알뜰
+                                </span>
                             </span>
                             <div class="good-info">
                                 <span class="good-cate">
@@ -673,6 +676,9 @@
                                     <a href="#" class="good-link">
                                         <span class="good-img">
                                             <img src='images/sale_06.jpg' alt="제품">
+                                            <span class="good-tag good-tag-red">
+                                                알뜰
+                                            </span>
                                         </span>
                                         <div class="good-info">
                                             <span class="good-cate">
@@ -733,6 +739,9 @@
                                     <a href="#" class="good-link">
                                         <span class="good-img">
                                             <img src='images/sale_09.jpg' alt="제품">
+                                            <span class="good-tag good-tag-red">
+                                                알뜰
+                                            </span>
                                         </span>
                                         <div class="good-info">
                                             <span class="good-cate">
@@ -845,7 +854,7 @@
                                     <a href="#" class="good-link">
                                         <span class="good-img">
                                             <img src='images/copartner_02.jpg' alt="제품">
-                                            <span class="good-tag-red">
+                                            <span class="good-tag good-tag-red">
                                                 알뜰
                                             </span>
                                         </span>
