제철요리, 사이트맵, Swiper 모달창 구현

--- a/index.html
+++ b/index.html
@@ -34,6 +34,60 @@
 </head>
 
 <body>
+    <!-- 비주얼 모달창 -->
+    <div class="visual-modal">
+
+        <ul class="visual-modal-box clearfix">
+            <li>
+                <a href="#">
+                    <img src="images/swiper_img_01.jpg" alt="제품">
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <img src="images/swiper_img_02.jpg" alt="제품">
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <img src="images/swiper_img_03.jpg" alt="제품">
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <img src="images/swiper_img_04.jpg" alt="제품">
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <img src="images/swiper_img_05.jpg" alt="제품">
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <img src="images/swiper_img_06.jpg" alt="제품">
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <img src="images/swiper_img_07.jpg" alt="제품">
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <img src="images/swiper_img_08.jpg" alt="제품">
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <img src="images/swiper_img_09.jpg" alt="제품">
+                </a>
+            </li>
+        </ul>
+        <div class="visual-modal-close">
+            <img src="images/btnMoreClose.jpg" alt="닫기">
+        </div>
+    </div>
     <!-- 모달창 -->
     <button class="modal-bt">모달창열기</button>
     <div class="modal">
@@ -294,7 +348,6 @@
                             <input type="image" src="images/btnSearch.png" class="search-bt">
                         </form>
                         <a href="#" class="bucket">
-                            <i></i>
                             <em>0</em>
                         </a>
                     </div>
@@ -1483,81 +1536,12 @@
                         <div class="cook-right">
                             <div class="cook-wrap">
                                 <ul class="cook-list">
-                                    <li>
-                                        <button class="cook-bt"></button>
-                                        <a href="#" class="cook-good clearfix">
-                                            <img src="images/cook_01.jpg" alt="제품">
-                                            <p class="cook-good-info">
-                                                <span class="cook-good-title">
-                                                    월앙매실(선물용/1L)</span>
-                                                <span class="cook-good-price">
-                                                    <b>29,000</b>원
-                                                </span>
-                                                </span>
-                                            </p>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <button class="cook-bt"></button>
-                                        <a href="#" class="cook-good clearfix">
-                                            <img src="images/cook_02.jpg" alt="제품">
-                                            <p class="cook-good-info">
-                                                <span class="cook-good-title">
-                                                    깻잎(30장)</span>
-                                                <span class="cook-good-price">
-                                                    <b>1,250</b>원
-                                                </span>
-                                                </span>
-                                            </p>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <button class="cook-bt"></button>
-                                        <a href="#" class="cook-good clearfix">
-                                            <img src="images/cook_03.jpg" alt="제품">
-                                            <p class="cook-good-info">
-                                                <span class="cook-good-title">
-                                                    유기농현미식초</span>
-                                                <span class="cook-good-price">
-                                                    <b>3,700</b>원
-                                                </span>
-                                                </span>
-                                            </p>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <button class="cook-bt"></button>
-                                        <a href="#" class="cook-good clearfix">
-                                            <img src="images/cook_04.jpg" alt="제품">
-                                            <p class="cook-good-info">
-                                                <span class="cook-good-title">
-                                                    배(대:3개)</span>
-                                                <span class="cook-good-price">
-                                                    <b>10,200</b>원
-                                                </span>
-                                                </span>
-                                            </p>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <button class="cook-bt"></button>
-                                        <a href="#" class="cook-good clearfix">
-                                            <img src="images/cook_05.jpg" alt="제품">
-                                            <p class="cook-good-info">
-                                                <span class="cook-good-title">
-                                                    고춧가루(400g/청양)</span>
-                                                <span class="cook-good-price">
-                                                    <b>21,500</b>원
-                                                </span>
-                                                </span>
-                                            </p>
-                                        </a>
-                                    </li>
+                                    
                                 </ul>
                             </div>
                             <div class="cook-total">
                                 <button class="cook-bt"></button>
-                                <span class="cook-bt-all">전체선택</span><em id="cook-count"> 5</em>개
+                                <span class="cook-bt-all">전체선택</span>&nbsp;<em id="cook-count">5</em>개
                             </div>
                             <a href="#" class="cook-link">
                                 총 <em id="cook-price-total">65,650</em>원 장바구니 담기
@@ -1806,33 +1790,33 @@
                                     <span class="notice-date">2021.11.30</span>
                                 </li>
                                 <li>
-                                    <a href="#">2022년 설 연휴 운영 안내(매장, 주문공급, 조합원상담실)</a>
+                                    <a href="#"><주간한살림> 13호 | 모두를 위한 어린이날</a>
                                     <span class="notice-date">2021.11.30</span>
                                 </li>
                                 <li>
-                                    <a href="#">2022년 설 연휴 운영 안내(매장, 주문공급, 조합원상담실)</a>
+                                    <a href="#">2022 옷되살림 2주 연장, 옷을 더 모아주세요!</a>
                                     <span class="notice-date">2021.11.30</span>
                                 </li>
                                 <li>
-                                    <a href="#">2022년 설 연휴 운영 안내(매장, 주문공급, 조합원상담실)</a>
+                                    <a href="#">2022년 5월 물품 이용후기 이벤트</a>
                                     <span class="notice-date">2021.11.30</span>
                                 </li>
                             </ul>
-                            <ul class="news-list">
+                            <ul class="notice-list">
                                 <li>
                                     <a href="#">냉장육(신선육) 포장 및 생물 수산물 흡수패드 변경 안내</a>
                                     <span class="notice-date">2021.11.30</span>
                                 </li>
                                 <li>
-                                    <a href="#">냉장육(신선육) 포장 및 생물 수산물 흡수패드 변경 안내</a>
+                                    <a href="#">안심대안한우 거세우 전환 공급 안내</a>
                                     <span class="notice-date">2021.11.30</span>
                                 </li>
                                 <li>
-                                    <a href="#">냉장육(신선육) 포장 및 생물 수산물 흡수패드 변경 안내</a>
+                                    <a href="#">짜먹는워터젤리포도산머루(100g*10봉)</a>
                                     <span class="notice-date">2021.11.30</span>
                                 </li>
                                 <li>
-                                    <a href="#">냉장육(신선육) 포장 및 생물 수산물 흡수패드 변경 안내</a>
+                                    <a href="#">보리(무/1kg)</a>
                                     <span class="notice-date">2021.11.30</span>
                                 </li>
                             </ul>
@@ -1946,7 +1930,7 @@
                         <li><a href="#">앱다운로드</a></li>
                     </ul>
                     <div class="footer-site">
-                        <a href="#">
+                        <a href="#" class="f-site-link">
                             <span>한살림 가족</span>
                             <span>지역한살림<i></i></span>
                         </a>
