--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <script src="js/jquery.nicescroll.min.js"></script>
 
     <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css" />
+    <link rel="stylesheet" href="css/font-awesome/css/all.min.css"/>
 
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
