고정메뉴 위치 변경 및 footer 메뉴 구현

--- a/index.html
+++ b/index.html
@@ -1921,7 +1921,7 @@
                 </div>
             </div>
             <div class="footer-top">
-                <div class="container">
+                <div class="container clearfix">
                     <ul class="footer-nav">
                         <li><a href="#">이용약관</a></li>
                         <li><a href="#">개인정보처리방침</a></li>
@@ -1931,7 +1931,7 @@
                     </ul>
                     <div class="footer-site">
                         <a href="#" class="f-site-link">
-                            <span>한살림 가족</span>
+                            한살림 가족
                             <span>지역한살림<i></i></span>
                         </a>
                     </div>
