--- a/index.html
+++ b/index.html
@@ -4,12 +4,21 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="사람과 자연 모두에 건강한 먹을거리와 생활용품을 생산·공급 합니다" />
+    <meta name="keywords" content="쌀, 유정란, 참기름, 사과, 고구마, 복숭아, 딸기, 토마토, 감자, 홍삼, 양배추즙, 닭가슴살, 귤" />
+    <meta name="author" content="KIMDAHYE" />
+    <meta name="og:site_name" content="한살림 장보기 :: 지구를 살리는 뜻깊은 생활실천, 한살림" />
+    <meta name="og:title" content="한살림 장보기 :: 지구를 살리는 뜻깊은 생활실천, 한살림" />
+    <meta name="og:description" content="사람과 자연 모두에 건강한 먹을거리와 생활용품을 생산·공급 합니다" />
+    <meta name="og:type" content="website" />
+    <meta name="og:url" content="https://manzana0118.github.io/hansalim" />
+    <meta name="og:image" content="https://user-images.githubusercontent.com/102004400/167523152-bb050215-31a6-49b1-8619-c758129dd381.png" />
     <!-- favicon -->
     <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico">
     <link rel="apple-touch-icon-precomposed" href="images/mobile_web_icon.png">
     <meta name="viewport"
         content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
-    <title>한살림 장보기 :: 지구를 살리는 뜻깊은 생활실천, 한살림 (클론코딩)</title>
+    <title>한살림 장보기 :: 지구를 살리는 뜻깊은 생활실천, 한살림</title>
     <!--[if lt IE 9]>
     <script src="js/html5shiv.js"></script>
     <![endif]-->
